changed backery to bakery.  not sure how to change the header that says backery4.  Could just be the name of the respository.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
         android:gravity="center_vertical"
-        android:text="Backery "
+        android:text="Bakery"
         android:textColor="#020202"
         android:textSize="40dp"
         android:textStyle="italic"
