--- a/app/src/main/res/layout/activity_demographic.xml
+++ b/app/src/main/res/layout/activity_demographic.xml
@@ -26,8 +26,8 @@
         android:id="@+id/income"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="232dp"
+        android:layout_marginStart="116dp"
+        android:layout_marginTop="244dp"
         android:text="Choose your income"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,8 +37,8 @@
         android:id="@+id/income_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
-        android:layout_marginEnd="56dp"
+        android:layout_marginTop="204dp"
+        android:layout_marginEnd="52dp"
         android:text="40000"
         android:textColor="#FF9800"
         android:textSize="20dp"
@@ -49,7 +49,7 @@
         android:id="@+id/income_Bar"
         android:layout_width="237dp"
         android:layout_height="0dp"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="84dp"
         android:layout_marginBottom="388dp"
         android:progressTint="#FF9800"
         android:thumbTint="#FF9800"
@@ -60,7 +60,7 @@
         android:id="@+id/zipcode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
+        android:layout_marginStart="112dp"
         android:layout_marginTop="24dp"
         android:text="Type your Zipcode"
         android:textSize="20dp"
@@ -71,11 +71,11 @@
         android:id="@+id/Zipcode_value"
         android:layout_width="236dp"
         android:layout_height="0dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginBottom="268dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginBottom="272dp"
         android:ems="10"
+        android:hint="zip"
         android:inputType="number"
-        android:text="Zip"
         android:textColor="#FF9800"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -84,8 +84,8 @@
         android:id="@+id/store"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginTop="20dp"
         android:text="Select your Store"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -98,17 +98,17 @@
         android:layout_marginBottom="74dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.385"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/demo_title1"
-        app:layout_constraintVertical_bias="0.839" />
+        app:layout_constraintVertical_bias="0.822" />
 
     <Button
         android:id="@+id/breadclick"
         android:layout_width="150dp"
         android:layout_height="58dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="92dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="72dp"
         android:backgroundTint="#FF9800"
         android:text="BreadCLick"
         app:layout_constraintStart_toStartOf="@+id/store_choice"
@@ -118,7 +118,7 @@
         android:id="@+id/humanicon"
         android:layout_width="174dp"
         android:layout_height="103dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="48dp"
         android:layout_marginBottom="535dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/demo_title1"
