--- a/app/src/main/res/layout/dialog_item_quantity_update.xml
+++ b/app/src/main/res/layout/dialog_item_quantity_update.xml
@@ -10,7 +10,7 @@
         android:id="@+id/view5"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="#FF9800"
         android:outlineAmbientShadowColor="@color/cardview_dark_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -35,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="28dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="#FF9800"
         android:outlineAmbientShadowColor="@color/cardview_dark_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
