--- a/app/src/main/res/layout/activity_stores.xml
+++ b/app/src/main/res/layout/activity_stores.xml
@@ -1,84 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Stores">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="69dp"
-            android:layout_marginTop="36dp"
-            android:text="Today's Available Discount"
-            android:textColor="#020202"
-            android:textSize="25dp"
-            android:textStyle="italic"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="13dp"
+        android:text="Today's Available Discount"
+        android:textColor="#020202"
+        android:textSize="30dp"
+        android:textStyle="italic"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="309dp"
+        android:layout_height="158dp"
+        android:layout_marginStart="53dp"
+        android:layout_marginEnd="53dp"
+        android:layout_marginBottom="481dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:srcCompat="@drawable/crossiant" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="232dp"
+        android:layout_height="310dp"
+        android:layout_marginBottom="158dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <TextView
             android:id="@+id/bagelShown"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="53dp"
+            android:fontFamily="casual"
             android:textSize="20dp"
-            android:layout_gravity="center"
-            />
+            app:layout_constraintBottom_toTopOf="@+id/breadShown"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
         <TextView
             android:id="@+id/breadShown"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:layout_gravity="center"
-            />
+            android:layout_height="53dp"
+            android:fontFamily="casual"
+            android:textSize="20dp" />
+
         <TextView
             android:id="@+id/cookieShown"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:layout_gravity="center"
-            />
+            android:layout_height="53dp"
+            android:fontFamily="casual"
+            android:textSize="20dp" />
+
         <TextView
             android:id="@+id/doughnutShown"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:layout_gravity="center"
-            />
+            android:layout_height="53dp"
+            android:fontFamily="casual"
+            android:textSize="20dp" />
+
         <TextView
             android:id="@+id/muffinShown"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:layout_gravity="center"
-            />
+            android:layout_height="53dp"
+            android:fontFamily="casual"
+            android:textSize="20dp" />
+
         <TextView
             android:id="@+id/pieShown"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:layout_gravity="center"
-            />
-        <Button
-            android:id="@+id/purchase_button"
-            android:layout_width="150dp"
-            android:layout_height="58dp"
-            android:layout_marginStart="146dp"
-            android:layout_marginEnd="140dp"
-            android:layout_marginBottom="44dp"
-            android:backgroundTint="#FF9800"
-            android:text="Purchase "
-            />
+            android:layout_height="53dp"
+            android:fontFamily="casual"
+            android:textSize="20dp" />
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/purchase_button"
+        android:layout_width="150dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="632dp"
+        android:backgroundTint="#FF9800"
+        android:text="Purchase "
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</RelativeLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
