--- a/app/src/main/res/layout/activity_grocerry_store.xml
+++ b/app/src/main/res/layout/activity_grocerry_store.xml
@@ -1,22 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Grocerry_store">
 
-    <TextView
-        android:id="@+id/avaliable_store"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="Avalable Store for you."
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textColor="#020202"
-        android:textSize="30dp"
-        android:textStyle="italic"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_margin="10dp"
+        android:orientation="vertical">
+
+<!--        <RelativeLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="?actionBarSize">-->
+
+
+<!--        </RelativeLayout>-->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Stores Avaliable "
+            android:textSize="30sp"
+            android:fontFamily="@font/brandon"
+            android:textAllCaps="true"/>
+        <RelativeLayout
+            android:layout_width="350dp"
+            android:layout_height="150dp"
+            android:background="@drawable/round_red">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Safeway"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                android:fontFamily="@font/brandon_bold"
+                android:padding="40dp"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="See Detail"
+                android:background="#00000000"
+                android:padding="20dp"
+                android:id="@+id/safeway"
+                android:textColor="@color/black"
+                android:layout_alignParentBottom="true"/>
+            <ImageView
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:src="@drawable/safeway"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="-1dp"/>
+
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="350dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/round_green"
+            >
+
+            <ImageView
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="-28dp"
+                android:layout_marginRight="0dp"
+                android:src="@drawable/whole_foods_market_logo" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Whole Foods"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                android:fontFamily="@font/brandon_bold"
+                android:padding="40dp"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="See Detail"
+                android:background="#00000000"
+                android:padding="20dp"
+                android:layout_alignParentBottom="true"/>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="350dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/round_yellow">
+            <ImageView
+                android:layout_width="130dp"
+                android:layout_height="180dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="-56dp"
+                android:layout_marginRight="0dp"
+                android:src="@drawable/giant" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Giant"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                android:fontFamily="@font/brandon_bold"
+                android:padding="40dp"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="See Detail"
+                android:background="#00000000"
+                android:padding="20dp"
+                android:layout_alignParentBottom="true"/>
+
+        </RelativeLayout>
+
+
+    </LinearLayout>
+</ScrollView>
